2012-November-18 Chris Morley

	* mesmer1.xsl: Make "Comparison with Experimental Data" in
	Firefox output collapsable.

2012-November-14 Struan Robertson

	* MolecularComponent.cpp/.h, and related files: Removal of 
	cemetery state code.

2012-November-10 Struan Robertson

	* MESMER manual.docx: Updated manual with more detail on ZPE 
	calculation.

2012-October-24 Struan Robertson

	* UnitTest.cpp/.xml, Morse.cpp: Minor corrections to density of 
	state methods to use nint() (nearest integer) method.

2012-October-21 Struan Robertson

	* UnitTest.cpp/.xml: Further addition of MEIC tests.

2012-October-21 Struan Robertson

	* UnitTest.cpp/.xml: Addition of more MEIC tests.

2012-July-29 Struan Robertson

	* ThermodynamicTable.cpp: Altered so that partition function data 
	can be printed.

	* Morse.cpp: Implementation of density of states and canonical 
	partition function.

2012-July-24 Chris Morley

	* popDiag.xsl TS energies in Grain Population diagrams now as
	  full length dotted lines.

2012-July-21 Struan Robertson

	* MoleculeManager.cpp/.h: Minor change to add molecule method.

2012-July-21 Struan Robertson

	* System.cpp/.h, UnitTests.cpp: Add new MEIC unit test for sum of states.

2012-July-21 Struan Robertson

	* System.cpp/.h, ThermodynamicTable.cpp: Altered so that thermodynamic
	table calculations do not need to specify a reaction sequence.

2012-July-16 Struan Robertson

	* Morse.cpp: Initial template for Morse density of states class.

2012-July-13 Chris Morley

	* src/error.cpp: flush log file on the way through so there is
	something to look at after a crash

	* src/CollisionOperator.cpp: Change "Cell number" to 
	"Number of Cells" and supressed multiple messages.
	
	* src/MesmerMath.cpp: add "once" to supress multiple error messages.
	Moved Error Context() (but may not be significant. 

	* src/MolecularComponents.cpp, src/MolecularComponents.h: remove log
	messages about atoms not having vibrational frequencies and rot consts.  
	